--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -26,8 +26,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/projet-two" # the subpath of your site, e.g. /blog !!! A adapter
 url: "https://reseau-2020.github.io" # the base hostname & protocol for your site, e.g. http://example.com !!! ne pas modifier
-twitter_username: goffinet
-github_username:  goffinet
+#twitter_username: goffinet
+#github_username:  goffinet
 
 # Build settings
 theme: minima
