--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,15 +19,15 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Projet groupe 2
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
+# email: your-email@example.com
+# description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/projet-two" # the subpath of your site, e.g. /blog !!! A adapter
 url: "https://reseau-2020.github.io" # the base hostname & protocol for your site, e.g. http://example.com !!! ne pas modifier
-#twitter_username: goffinet
-#github_username:  goffinet
+# twitter_username: goffinet
+# github_username:  goffinet
 
 # Build settings
 theme: minima
