--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,9 +21,7 @@
 title: Projet groupe 2
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Cette page à pour simple objectif de montrer un suivi de nos activités lors du projet
 baseurl: "/projet-two" # the subpath of your site, e.g. /blog !!! A adapter
 url: "https://reseau-2020.github.io" # the base hostname & protocol for your site, e.g. http://example.com !!! ne pas modifier
 # twitter_username: goffinet
