--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 # title: Projet groupe 2
-email: your-email@example.com
+# email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Cette page à pour simple objectif de montrer un suivi de nos activités lors du projet
 baseurl: "/projet-two" # the subpath of your site, e.g. /blog !!! A adapter
