--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-# title: Projet groupe 2
+title: Projet groupe 2
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Cette page à pour simple objectif de montrer un suivi de nos activités lors du projet
