--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,7 +13,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 #
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
+# These are used to personalize your new site. If you look in the HTML files
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
@@ -44,7 +44,7 @@ plugins:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
- exclude:
+#exclude:
    - .sass-cache/
    - .jekyll-cache/
    - gemfiles/
@@ -55,9 +55,3 @@ plugins:
    - vendor/cache/
    - vendor/gems/
    - vendor/ruby/
-   - annexes/R1.md
-   - .annexes/R1.md
-   - /annexes/R1.md
-   
-exclude: [workers]
-exclude: [annexes]
