--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,7 +30,7 @@ url: "https://reseau-2020.github.io" # the base hostname & protocol for your sit
 # Build settings
 theme: minima
 plugins:
-  - jekyll-feed
+#  - jekyll-feed
   - jekyll-paginate
   - jekyll-seo-tag
   - jekyll-sitemap
